src/main/java/com/example/signalapp/error/MaxNumberExceptionParams.java
package com.example.signalapp.error;

public record MaxNumberExceptionParams(int maxNumber) {
}
